# AOC22

./: CMakeLists.txt
aoc1/: aoc1.cpp
aoc10/: aoc10.cpp
aoc11/: aoc11.cpp
aoc12/: aoc12.cpp
aoc13/: aoc13.cpp
aoc14/: aoc14.cpp
aoc15/: aoc15.cpp
aoc2/: aoc2.cpp
aoc3/: aoc3.cpp
aoc4/: aoc4.cpp
aoc5/: aoc5.cpp
aoc6/: aoc6.cpp
aoc7/: aoc7.cpp
aoc8/: aoc8.cpp
aoc9/: aoc9.cpp
