cmake_minimum_required(VERSION 3.24)
project(AOC)

set(CMAKE_CXX_STANDARD 17)

add_executable(AOC1 aoc1/aoc1.cpp)
add_executable(AOC2 aoc1/aoc1.cpp)
add_executable(AOC3 aoc3/aoc3.cpp)
add_executable(AOC4 aoc4/aoc4.cpp)
add_executable(AOC5 aoc5/aoc5.cpp)
add_executable(AOC6 aoc6/aoc6.cpp)
add_executable(AOC7 aoc7/aoc7.cpp)
add_executable(AOC8 aoc8/aoc8.cpp)
add_executable(AOC9 aoc9/aoc9.cpp)
